# python-package-development

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: check-budget.yml
examples/my-package/: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
examples/my-package/docs/: api.md  index.md
examples/my-package/src/my_package/: __init__.py  _messages.py  core.py  errors.py
examples/my-package/tests/: conftest.py  test_core.py  test_errors.py
references/: 01-scaffold.md  02-api-design.md  03-testing.md  04-docs.md  05-lifecycle.md  06-release.md  07-common-mistakes.md  09-cli-entry-points.md  10-monorepo.md
scripts/: check-structure.py  count-tokens.py
skills/python-package-development/: SKILL.md
skills/python-package-development/references/: 01-scaffold.md  02-api-design.md  03-testing.md  04-docs.md  05-lifecycle.md  06-release.md  08-pre-commit.md  10-monorepo.md  11-automated-release.md  12-testing-mocking.md  13-testing-snapshots.md  14-faq.md
